--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,20 @@
-<h1>Dev ops Module</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contador</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Contador</h1>
+        <div class="counter">
+            <p id="count">0</p>
+            <button onclick="setCounter(1)">Incrementar</button>
+            <button onclick="setCounter(0)">Reset</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
